--- a/teste.yaml
+++ b/teste.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   title: Classic API Resource Documentation
-  description: <a href="https://evil.com"><marquee> COSMESS- POC HTML INJECTION MARQUEE <br></marquee></a>
+  description: <a href="https://evil.com"><marquee> COSMESS- POC HTML INJECTION MARQUEE</marquee></a>
   version: production
 basePath: /JSSResource/
 produces:
